# gpu-programming

./: README.md
01_hello/: CMakeLists.txt  README.md
01_hello/include/: utils.hpp
01_hello/kernels/: calculateArray.cl  whoAmI.cl
01_hello/src/: main.cpp
02_axpy/: CMakeLists.txt  README.md
02_axpy/include/: axpy.hpp  utils.hpp
02_axpy/kernels/: axpy.cl
02_axpy/src/: axpy.cpp  main.cpp
03_gemm/: CMakeLists.txt
03_gemm/kernels/: multiplyImage.cl
03_gemm/src/: main.cpp  multiply.cpp
03_matrix_mult/: CMakeLists.txt
03_matrix_mult/include/: multiply.hpp  utils.hpp
03_matrix_mult/kernels/: multiply.cl  multiplyBlock.cl  multiplyImage.cl
03_matrix_mult/src/: main.cpp  multiply.cpp  utils.cpp
04_jacobi/: CMakeLists.txt
04_jacobi/include/: jacobi.hpp  utils.hpp
04_jacobi/kernels/: jacobi.cl
04_jacobi/src/: jacobi.cpp  main.cpp  utils.cpp
05_hetero/: CMakeLists.txt
05_hetero/include/: jacobi.hpp  multiply.hpp  utils.hpp
05_hetero/kernels/: multiply.cl
05_hetero/src/: jacobi.cpp  main.cpp  multiply.cpp
